# gabelang

./: '  Cargo.toml  README  README.md  test.gabe
.github/workflows/: release.yml
examples/: counter.gabe  fib.gabe
src/: ast.rs  built_ins.rs  evaluator.rs  lexer.rs  lib.rs  main.rs  parser.rs  repl.rs
src/evaluator/: built_ins.rs  mod.rs  scope.rs  stack.rs
