[package]
name = "gabelang"
version = "1.3.0"
edition = "2021"
license = "MIT"
authors = ["Gabriel Buxo"]
description = "A high level, interpretted and garbage collected programming language"
readme = "README.md"
repository = "https://github.com/buxogabriel/gabelang"
categories = ["compilers"]

[dependencies]
