[package]
name = "gabelang"
version = "2.1.0"
edition = "2021"
license = "MIT"
authors = ["Gabriel Buxo"]
description = "A high level, interpretted and garbage collected programming language"
readme = "README.md"
repository = "https://github.com/buxogabriel/gabelang"
categories = ["compilers"]

[dependencies]
wasm-bindgen = { version = "0.2", optional = true }

[features]
wasm = ["dep:wasm-bindgen"]

[lib]
crate-type = ["cdylib", "rlib"]
